# EasyBot.py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
SimpleBot/: config.yaml  info  manage.py
SimpleBot/Core/: bot.py  test.py
SimpleBot/Core/Cogs/: main.py  maintest.py  plugin_tools.py  server_tools.py  test.py
SimpleBot/SimpleBot_Utils/: __init__.py  main.py  proc_manager.py
community/: CONTRIBUTING.md
eb_files/: basicbot.py  core.py  eb_control.py  ui.py
eb_files/cogs/: example_plugin.pyexample  plugin_tools.py  server_tools.py
installers/: dependancies.md  installer.bat  requirements.txt
