[tool.poetry]
name = "SimpleBot.py"
version = "3.0.0"
description = "A simple, no fuss Discord bot that can be deployed without any code"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = {version = "2.2.2", extras = ["voice"]}
qrcode = {extras = ["pil"], version = "^7.3.1"}
SQLAlchemy = "^2.0.4"
wget = "^3.2"
asyncpg = "^0.26.0"
asyncpraw = "^7.5.0"
aiosqlite = "^0.17.0"
orjson = "^3.8.0"
aiodns = "^3.0.0"
deep-translator = "^1.8.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
aiohttp = "^3.8.1"
charset-normalizer = "^2.1.1"
cchardet = "^2.1.7"
Brotli = "^1.0.9"
typer = {extras = ["all"], version = "^0.6.1"}
pyfiglet = "^0.8.post1"
psutil = "^5.9.2"
setproctitle = "^1.3.2"
PyYAML = "^6.0"
asyncmy = "^0.2.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
